<resources>
    <string name="app_name">ActOnline</string>
    <string name="hello">Xin chào !</string>
    <string name="slogan">Thành công là tổng thể của những nỗ lực nhỏ, lặp đi lặp lại ngày này qua ngày khác.</string>
    <string name="login_now">Đăng nhập</string>
    <string name="app_name_inapp">K M A - E L E A R N I N G</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_title">Về việc lấy ý kiến phản hồi từ người học về hoạt động giảng dạy của giảng viên học kỳ 1 năm học 2020 – 2021</string>
    <string name="default_notification_decs">Căn cứ Kế hoạch số 16/KH-HVM ngày 8 tháng 1 năm 2021 của Giám đốc Học viện Kỹ thuật mật mã về việc lấy ý kiến phản hồi từ người học về hoạt động giảng dạy của giảng viên Học kỳ 1 năm học 2020 – 2021</string>
    <string name="seen">✓ Đã xem</string>
    <string name="login">Đăng nhập</string>
    <string name="skip">Bỏ qua</string>
    <string name="forget_password">Nhớ mật khẩu</string>
    <string name="site_name">Học viện Kỹ thuật mật mã</string>
    <string name="site_adress">Add: 141 đường Chiến Thắng, Tân Triều, Thanh Trì, Hà Nội</string>
    <string name="site_telephone">Tel: 04.38544244</string>
    <string name="site_website">Website: www.actvn.edu.vn</string>
    <string name="maps_direction">Tìm đường đến trường</string>
    <string name="edit_function">Tuỳ chỉnh tính năng</string>
    <string name="edit">Tuỳ chỉnh</string>
    <string name="ok">Đồng ý</string>
    <string name="cancel">Huỷ</string>
    <string name="careful">Cẩn thận</string>
    <string name="restore_setting_decs">Bạn có chắc chắn muốn khôi phục cài đặt về trạng thái ban đầu ?</string>
    <string name="save">Lưu lại</string>
    <string name="tips">Mẹo nhỏ</string>
    <string name="tips_editsetting_decs">Kéo thả các ô để thay đổi vị trí</string>
    <string name="success">Thành công</string>
    <string name="saved_edited">Thiết lập thành công !</string>

    <string name="default_long_text">Lorem is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="default_short_text">A more personal experience</string>
    <string name="default_empty_text">Không có nội dung</string>
    <string name="default_date_text">05/05/2022</string>

    <!--    For Custom Calendar-->
    <string name="material_calendar_monday">T2</string>
    <string name="material_calendar_tuesday">T3</string>
    <string name="material_calendar_wednesday">T4</string>
    <string name="material_calendar_thursday">T5</string>
    <string name="material_calendar_friday">T6</string>
    <string name="material_calendar_saturday">T7</string>
    <string name="material_calendar_sunday">CN</string>

    <array name="material_calendar_months_array">
        <item>Tháng Một</item>
        <item>Tháng Hai</item>
        <item>Tháng Ba</item>
        <item>Tháng Tư</item>
        <item>Tháng Năm</item>
        <item>Tháng Sáu</item>
        <item>Tháng Bảy</item>
        <item>Tháng Tám</item>
        <item>Tháng Chín</item>
        <item>Tháng Mười</item>
        <item>Tháng Mười một</item>
        <item>Tháng Mười hai</item>
    </array>

    <string name="material_calendar_today_button">Hôm nay</string>
    <string name="material_calendar_positive_button">Đồng ý</string>
    <string name="material_calendar_negative_button">Huỷ</string>
    <string name="txt_loading">Đang tải, vui lòng chờ trong giây lát.</string>
    <string name="no_posts_to_display">Không có bài viết nào !</string>
    <string name="item_maps">Vị trí Học viện</string>
    <string name="go_to_website">Truy cập Website</string>
    <string name="app_info">Thông tin ứng dụng</string>
    <string name="share_to_friend">Chia sẻ với bạn bè</string>
    <string name="logout">Đăng xuất</string>
    <string name="close_app">Đóng ứng dụng</string>
    <string name="more">Khác</string>
    <string name="calendar">Lịch biểu</string>
    <string name="courses">Khoá học</string>
    <string name="home">Trang chủ</string>
    <string name="function">Chức năng</string>
    <string name="please_wait">Bạn vui lòng chờ một chút !</string>
    <string name="new_feeds">Bảng tin</string>
    <string name="my_medal">Huy hiệu của tôi</string>


</resources>