<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.activity.LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_layout_default"
        android:drawablePadding="@dimen/margin_8"
        android:fontFamily="@font/default_bold"
        android:text="@string/app_name_inapp"
        android:textColor="@color/text_black"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/ic_school"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="@dimen/margin_16"
        android:background="@drawable/bg_img_loginscr"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:fontFamily="@font/default_bold"
        android:text="@string/hello"
        android:textColor="@color/text_black"
        android:textSize="@dimen/textsize_level_2"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal" />

    <TextView
        android:id="@+id/tv_slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_layout_default"
        android:fontFamily="@font/default_light"
        android:gravity="center"
        android:text="@string/slogan"
        android:textSize="@dimen/textsize_level_5"
        app:layout_constraintTop_toBottomOf="@id/tv_hello" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="@dimen/margin_layout_default"
        android:layout_marginTop="@dimen/margin_32"
        android:background="@drawable/bg_edt"
        android:drawablePadding="@dimen/margin_4"
        android:fontFamily="@font/default_regular"
        android:hint="@string/username"
        android:paddingHorizontal="@dimen/margin_16"
        android:textSize="@dimen/textsize_level_5"
        app:drawableLeftCompat="@drawable/ic_person"
        app:layout_constraintTop_toBottomOf="@id/tv_slogan" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="@dimen/margin_layout_default"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@drawable/bg_edt"
        android:drawablePadding="4dp"
        android:fontFamily="@font/default_regular"
        android:hint="@string/password"
        android:paddingHorizontal="@dimen/margin_16"
        android:textSize="@dimen/textsize_level_5"
        app:drawableLeftCompat="@drawable/ic_password"
        app:layout_constraintTop_toBottomOf="@id/edt_username" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="@dimen/margin_layout_default"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@drawable/bg_btn_login"
        android:fontFamily="@font/default_regular"
        android:text="@string/login_now"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/edt_password" />
</androidx.constraintlayout.widget.ConstraintLayout>