<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_container"
    style="@style/RccMargin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rcc_round_10"
    android:padding="@dimen/dp8">

    <ImageView
        android:id="@+id/imv_type"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:padding="@dimen/dp2"
        android:src="@drawable/ic_event_site"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/view2"
        android:layout_width="2dp"
        android:layout_height="32dp"
        android:layout_marginStart="@dimen/dp8"
        android:layout_toEndOf="@id/imv_type"
        android:background="#90A4AE" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/view2"
        android:layout_alignBottom="@id/view2"
        android:layout_marginStart="@dimen/dp16"
        android:layout_toEndOf="@id/view2"
        android:fontFamily="@font/font_bold"
        android:gravity="center_vertical"
        android:text="@string/default_short_text"
        android:textColor="@color/text_black_title"
        android:textSize="@dimen/text_title" />

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imv_type"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:drawableStart="@drawable/ic_tv_calendar"
            android:drawablePadding="@dimen/dp4"
            android:fontFamily="@font/font_light"
            android:text="Thời gian:"
            android:textColor="@color/text_black_comment"
            android:textSize="@dimen/text_comment"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/font_regular"
            android:text="@string/default_date_text"
            android:textColor="@color/text_black_comment" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_top"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:drawableStart="@drawable/ic_tv_type"
            android:drawablePadding="@dimen/dp4"
            android:fontFamily="@font/font_light"
            android:text="Loại:"
            android:textColor="@color/text_black_comment"
            android:textSize="@dimen/text_comment"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/font_regular"
            android:text="Sự kiện khoá học"
            android:textColor="@color/text_black_content"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_type"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:drawableStart="@drawable/ic_tv_course"
            android:drawablePadding="@dimen/dp4"
            android:fontFamily="@font/font_light"
            android:text="Khoá học:"
            android:textColor="@color/text_black_comment"
            android:textSize="@dimen/text_comment"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/font_regular"
            android:text="Tin học đại cương"
            android:textColor="@color/text_black_content"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_course"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:drawableStart="@drawable/ic_tv_location"
            android:drawablePadding="@dimen/dp4"
            android:fontFamily="@font/font_light"
            android:text="Địa điểm:"
            android:textColor="@color/text_black_comment"
            android:textSize="@dimen/text_comment"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/font_regular"
            android:text="Văn Quán, Hà Đông, Hà Nội"
            android:textColor="@color/text_black_content"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_position"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:drawableStart="@drawable/ic_tv_desc"
            android:drawablePadding="@dimen/dp4"
            android:fontFamily="@font/font_light"
            android:text="Nội dung:"
            android:textColor="@color/text_black_comment"
            android:textSize="@dimen/text_comment"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:ellipsize="end"
            android:fontFamily="@font/font_regular"
            android:maxLines="3"
            android:text="@string/default_long_text"
            android:textColor="@color/text_black_content"
            tools:ignore="HardcodedText" />
    </LinearLayout>

</RelativeLayout>